@@ -1,3 +1,7 @@
+23/8/2006:	v3.3.0
+	- changed interface to bootloader + increased internal
+	  version number
+
 21/8/2006:	v3.2.37
 	- move to 32 bit, cont.
 
